# camelot-kconfig

./: Cargo.toml  README.md  REUSE.toml  meson.build  meson.options  requirements.txt
LICENSES/: ISC.txt
rust/: meson.build
rust/kconfig/: Cargo.toml
rust/kconfig/src/: lib.rs
rust/kconfig_import/: Cargo.toml
rust/kconfig_import/src/: lib.rs
scripts/: kconfig.py  stamp_configure.py
src/: lib.rs
templates/: rustargs.in
tests_package/cargo/: .config  .gitignore  Cargo.toml  build.rs
tests_package/cargo/src/: main.rs  nostd_wrapper.rs
